fix big gap in artist page

--- a/index.less
+++ b/index.less
@@ -698,7 +698,7 @@
                 }
             }
 
-            .vue-horizontal {
+            &:not(.artist-page) .vue-horizontal {
                 height    : 100%;
                 width     : 100%;
                 overflow-y: visible;
